# together-bot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Procfile  README.md  commands.ts  deno.jsonc  docker-compose.dev.yml  docker-compose.yml  fword_list.csv  fword_list_references.md  logging.yml  main.ts  pyproject.toml  utils.ts
.devcontainer/: devcontainer.json
.github/: dependabot.yml  stale.yml
.github/workflows/: black.yml  deploy.yml  lint.yml  stale.yml
tests/: test_fword.py  test_time.py  test_together_bot.py
tests/models/: test_fword_user.py
together_bot/: __main__.py  bot.py  channel.py  commands.py  dnf.py  fword.py  keyword.py  role.py  time.py  weather.py
together_bot/models/: dnf_grade_channel.py  fword_user.py
together_bot/utils/: db_toolkit.py
tools/: fword_list_refinery.py
