[tool.poetry]
name = "together-bot"
version = "0.1.0"
description = ""
authors = ["Lyuha <lyuha@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.5.1"
python-dotenv = "^0.20.0"
pyyaml = "^6.0"
python-dateutil = "^2.8.1"
aiohttp = "^3.7.4"
ntplib = "^0.4.0"
SQLAlchemy = "^1.4.42"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.15.0"

[tool.poetry.scripts]
bot = "together_bot.bot:start"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
